BIG NOTICE : changing gameData structure in next commit
- minor change on visual
- remove leave button when 2 players in a room
- going to rework gameData in next commit (remove map)

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,10 @@
     margin: 0;
   }
 }
+
+@layer components {
+
+  .tile {
+    @apply flex aspect-square h-16 m-1 bg-drac_white text-drac_black rounded-lg shadow-md
+  }
+}
