--- a/src/index.css
+++ b/src/index.css
@@ -22,4 +22,10 @@
     @apply absolute w-5 h-5 left-0 right-0 top-0 bottom-0 m-auto
      bg-drac_grey rounded-full scale-0 group-hover:scale-100
   }
+  
+  .result-button {
+    @apply flex grow w-1/3 min-w-[88px] max-w-[172px] h-[50px] m-auto py-2 
+    leading-tight bg-drac_darkgreen hover:bg-drac_green 
+    shadow-md shadow-drac_green/40 rounded-md text-xl text-center font-bold
+  }
 }
