finish up reset room

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -17,6 +17,8 @@
         <input type = 'text' placeholder="room id" id = "roomID"> </input>
         <button onclick="reset()"> reset </button>
     </div>
+
+    <p id = 'resetResult'></p>
     
 </body>
 </html>
