improve buttons style

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   .join-leave-button {
     @apply flex grow w-[40%] max-w-[70px] py-2 leading-tight
      /* bg-drac_darkgreen hover:bg-drac_green shadow-lg shadow-drac_green/40  */
-     rounded-full text-center font-bold
-     hover:scale-125 transition-all duration-100
+     rounded-full text-center font-bold 
+     scale-90 hover:scale-100 duration-100
   }
 }
