--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@
   
   .result-button {
     @apply flex grow w-1/3 min-w-[88px] max-w-[172px] h-[50px] m-auto py-2 
-    leading-tight bg-drac_darkgreen hover:bg-drac_green 
-    shadow-md shadow-drac_green/40 rounded-md text-xl text-center font-bold
+    leading-tight 
+     rounded-md text-xl text-center font-bold 
   }
 }
+ 
